added google adds

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,14 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>React App</title>
+    <title>The Amazing Lottery Predictor</title>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-2925960012751823",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   <body>
     <div id="root"></div>
